--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,6 @@
 # Data folder
 data/*
 
-# SQLite DB
-sql_app.db
-
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -60,6 +57,8 @@ coverage.xml
 .hypothesis/
 .pytest_cache/
 cover/
+.test.db
+test_data/
 
 # Translations
 *.mo
