--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,3 +28,10 @@ force_grid_wrap = 0
 use_parentheses = true
 ensure_newline_before_comments = true
 line_length = 88
+
+[tool.pytest.ini_options]
+minversion = "6.0"
+addopts = "-ra -q"
+env_files = [
+    ".test.env"
+]
