--- a/.test.env
+++ b/.test.env
@@ -1,2 +1,3 @@
 DOMAIN_CONFIG={"example.com": {"zone_id": "my_zone_id", "jwt": "${CLOUDFLARE_BEARER_TOKEN}"}}
 BACKUP_FILE=./test_data/backup.json
+SQLALCHEMY_DATABASE_URL=sqlite:///.test.db?check_same_thread=False
