--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -14,6 +14,8 @@ cfgv==3.3.1
     # via pre-commit
 charset-normalizer==2.1.0
     # via requests
+coverage[toml]==6.4.3
+    # via pytest-cov
 distlib==0.3.5
     # via virtualenv
 filelock==3.7.1
@@ -53,7 +55,10 @@ pyparsing==3.0.9
 pytest==7.1.2
     # via
     #   -r requirements-dev.in
+    #   pytest-cov
     #   pytest-dotenv
+pytest-cov==3.0.0
+    # via -r requirements-dev.in
 pytest-dotenv==0.5.2
     # via -r requirements-dev.in
 python-dotenv==0.20.0
@@ -76,6 +81,7 @@ toml==0.10.2
     # via pre-commit
 tomli==2.0.1
     # via
+    #   coverage
     #   mypy
     #   pytest
 typing-extensions==4.3.0
